# Advent-of-Code

./: .env.example  .gitignore  .gitmessage  README.md  TODO.md  pyproject.toml
python/2017/24/: solution.py
python/2022/01/: solution.py
python/2022/02/: solution2.py
python/2022/03/: solution.py
python/2022/06/: solution.py
python/2022/07/: example.txt
python/2022/08/: solution.py
python/2022/10/: solution.py
python/2022/day1/: solution.py
python/2022/day2/: solution.py
python/2022/day3/: solution.py
python/2022/day6/: solution.py
python/2022/day7/: solution.py
python/2022/day8/: solution.py
python/2022/day9/: solution.py
python/2023/01/: README.md  solution.py
python/2023/02/: solution.py
python/2023/03/: solution.py
python/2023/04/: solution.py
python/2023/06/: solution.py
python/2023/07/: solution.py
python/2023/08/: solution.py
python/2023/09/: solution.py
python/2023/10/: solution.py
python/2023/11/: solution.py
python/2023/13/: solution.py
python/2023/14/: solution.py
python/2023/15/: solution.py
python/2023/16/: solution.py
python/2023/17/: solution.py
python/2023/18/: solution.py
python/2023/19/: solution.py
python/2025/01/: solution.py
python/2025/02/: solution.py
python/2025/03/: solution.py
python/2025/04/: solution.py
python/2025/08/: solution.py
python/2025/09/: solution.py
python/2025/10/: solution.py
