[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "My Advent of Code solutions"
authors = ["Adrien-LUDWIG <ludwig.adrien0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
advent-of-code-data = "^2.0.1"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
